--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,12 @@ h1 {
 	font-size: 50px;
 }
 
+h2 {
+	color: white;
+	font-weight: 300;
+	font-size: 42px;
+}
+
 /* Styling for hyperlinks on webpage */
 p a {
 	color: aquamarine;
