--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,5 +22,14 @@ p a {
 	font-size: 16px;
 }
 
+/* Styling for non-hyperlink p elements */
+p {
+	font-size: 21px;
+	color: gray;
+}
 
+/* Styling for footer text */
+#footer {
+	text-align: right;
+}
 
